# daffodil

./: .gitignore  .travis.yml  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  test_new_parser.py
.github/workflows/: release.yml  tests.yml
daffodil/: __init__.py  __init__.pyx  base_delegate.py  base_delegate.pyx  django_hstore.py  django_integration.py  exceptions.py  hstore_predicate.py  hstore_predicate.pyx  key_expectation_delegate.py  key_expectation_delegate.pyx  parser.pxd  parser.py  parser.pyx  peg_parser.py  predicate.py  predicate.pyx  pretty_print.py  pretty_print.pyx  simulation_delegate.py  simulation_delegate.pyx
test/: daffodil  test.py  test_db.py  test_int.py  tests.py
test/data/: nyc_sat_scores.json  nyc_sat_scores.py  nyc_sat_scores_10_recs.json  nyc_sat_scores_ORGINAL.json  test_data_generation.py
test/dbmodel/: __init__.py  models.py
test/testapp/: __init__.py  models.py
test/testapp/migrations/: 0001_initial.py
